	  page length; this seems to provide fairly consistent
	  wrapping of tables without leaving huge expanses of
	  blank space at the bottom of pages.
	- The HTML output now also includes a font-family style
	  for PRE text; otherwise the body font would override
	  the PRE font with some browsers.
	- The snprintf/vsnprintf emulation functions were not
	  included in the HTMLDOC makefile.

    BUG FIXES

	- The web page output was not divided into chapters for
	  each input file.
	- The "make install" target did a clean.
	- The configure script would remove the image libraries
	  if you did not have FLTK installed.
	- The fix_filename() function didn't handle relative
	  URLs for images (e.g. SRC="../images/filename.gif")
	- Comments in the source document were being closed by
	  a </!--> tag in the HTML output.
	- The alignment attribute in TR elements was not inherited
	  by the TD and TH elements.
	- The HTML parser added whitespace before the title of a
	  document (missing check for TITLE element.)
	- The table formatter did not reset the column width when
	  a width was not specified explicitly.  This caused the
	  columns to be formatted with equal widths...


CHANGES IN HTMLDOC v1.8.11

    NEW FEATURES

	- Added koi8-r character set.
	- Added new "TrueType" font option for PDF output. This
	  (hopefully) should improve support for non-latin
	  languages.
	- Added support for "justify" alignment; this is
	  currently implemented by adding additional space
	  between characters (no automatic hyphenation...)

    CHANGES

	- The "make install" target does a "make all" to ensure
	  that the software is built before installing it.  This
	  should help users that don't read the documentation
	  build the software.
	- Incorporated several OS/2 compile fixes from Alexander
	  Mai.
	- Tables that exceed the printable width of the page are
	  now squeezed to fit.

    BUG FIXES

	- The temporary file created for PDF output to stdout
	  was not unique.