@@ -84,10 +84,17 @@ to the HTTP client:
 sub topdf(filename);
 
 sub topdf {
+    # Get the filename argument...
     my $filename = shift;
 
+    # Make stdout unbuffered...
+    select(STDOUT); $| = 1;
+
+    # Write the content type to the client...
     print "Content-Type: application/pdf\n\n";
-    system "htmldoc -t pdf --webpage $filename";
+
+    # Run HTMLDOC to provide the PDF file to the user...
+    system "htmldoc -t pdf --quiet --webpage $filename";
 }
 </PRE></UL>
 
